# nimble-thimble

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  run.ps1  run.sh
backend/: .env.example  pyproject.toml
backend/app/: config.py  db.py  decay.py  embeddings.py  llm.py  main.py  memory.py  models.py  reranker.py  settings.py  store.py
backend/app/routes/: chat.py  conversations.py  memories.py  metrics.py  settings.py  traces.py
backend/scripts/: eval_retrieval.py  reembed.py  scenarios.py
backend/tests/: test_smoke.py
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx  runtime.ts  store.ts  theme.css  types.ts
frontend/src/components/: ChatPane.tsx  ConversationSidebar.tsx  DocsModal.tsx  ErrorBoundary.tsx  InspectorPane.tsx  MemoryCard.tsx  MemoryPanel.tsx  MetricsBar.tsx  SettingsModal.tsx  TraceDrawer.tsx
