[project]
name = "memory-chat-backend"
version = "0.1.0"
description = "Chat assistant with inspectable memory"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "google-genai>=1.0",
    "fastembed>=0.4",
    "sqlite-vec>=0.1.6",
    "numpy>=1.26",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false
