[project]
name = "memory-chat-backend"
version = "0.1.0"
description = "Chat assistant with inspectable memory"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.138",
    "uvicorn[standard]>=0.49",
    "groq>=1.5",
    "fastembed>=0.8",
    "sqlite-vec>=0.1.9",
    "numpy>=2.1",
    "python-dotenv>=1.2",
]

[tool.uv]
package = false
