[project]
name = "memory-chat-backend"
version = "0.1.0"
description = "Chat assistant with inspectable memory"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.138",
    "uvicorn[standard]>=0.49",
    "groq>=1.5",
    "fastembed>=0.8",
    "sqlite-vec>=0.1.9",
    "numpy>=2.1",
    "python-dotenv>=1.2",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8.3",
    "httpx>=0.28",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]  # pyflakes + pycodestyle + import sort
ignore = ["E501"]  # long lines are the formatter's job, not lint's

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
